--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/express": "^4.17.2",
     "axios": "^0.19.0",
     "express": "^4.17.1",
+    "inversify": "^5.0.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.4"
   }
